# EVIQUE

./: .env.example  .gitattributes  .gitignore  ARTIFACT.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATASETS.md  DEPENDENCY_GRAPH.md  EXCLUDED_FILES.md  INCLUDED_FILES.md  INSTALL.md  LICENSE  MIGRATION.md  MODELS.md  OPEN_SOURCE_AUDIT.md  PAPER_RESULT_MANIFEST.md  README.md  RELEASE_MANIFEST.csv  RELEASE_NOTES.md  RENAME_REPORT.md  RENAMING_MAP.md  REPOSITORY_FILE_INVENTORY.csv  REPRODUCIBILITY.md  REPRODUCIBILITY_CHECKLIST.md  RESULT_LABEL_MIGRATION.md  SECRET_AND_PATH_AUDIT.md  SECURITY.md  THIRD_PARTY_LICENSES.md  VALIDATION_REPORT.md  db_rag_pipeline_common.py  environment.yml  evaluate_db_rag_answers.py  generate_db_rag_answers.py  make_per_query_eval_table.py  merge_db_rag_4dataset_results.py  merge_evique_ablation_results.py  normalize_db_rag_queries.py  pyproject.toml  (+10 more)
baselines/: README.md
db_benchmark/: __init__.py  metrics.py  registry.py  schema.py  utils.py
docs/: ABLATION_EXPERIMENT_COMMANDS.md  DB_RAG_METRICS_EXPLANATION.md  DB_RAG_METRIC_DICTIONARY.csv  EVIQUE_EVIDENCE_PLANNING_PACKING_ARCHITECTURE.md  PAPER_TO_ARTIFACT_MAPPING.md  RAG_METRICS_EXPLANATION.md  RAG_METRIC_DICTIONARY.csv
evique/: __init__.py  builder.py  cost_planner.py  event_segmenter.py  evidence_packer.py  planner.py  retriever.py  schema.py  solo_asr.py  solo_caption.py  solo_chunking.py  solo_video.py  standalone_base_builder.py  utils.py  video_identity.py  view_stats.py  visual_builder.py  visual_compactor.py
examples/: demo_segments.json  (+2 more)
(+110 files in other folders)
